test/files/neg/unicode-unterminated-quote.check
unicode-unterminated-quote.scala:2: error: unclosed string literal
  val x = /u0022
               ^
one error found
